feat: добавление последних проектов
